fixed on iphone

--- a/packages/frontend/src/app/components/wafrn-media/wafrn-media.component.scss
+++ b/packages/frontend/src/app/components/wafrn-media/wafrn-media.component.scss
@@ -4,7 +4,7 @@ img, video {
 }
 
 .nsfw {
-  filter: grayscale(1) blur(500px) contrast(20%)
+  filter: grayscale(1) blur(100px);
 }
 
 .cw-animation {
